corrects_validator_mistakes

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   </head>
 
   <body class="body">
-      <header class="header">
+    <header class="header">
       <div class="container header-container">
         <a href="" class="logo-header">
           <span class="web-header-first-part">Web</span>
@@ -52,12 +52,13 @@
         <div class="hero-section-main">
           <h1 class="hero-title">ЭФФЕКТИВНЫЕ РЕШЕНИЯ ДЛЯ ВАШЕГО БИЗНЕСА</h1>
           <div class="hero-section-button">
-          <button type="button" class="button">Заказать услугу</button>
+            <button type="button" class="button">Заказать услугу</button>
           </div>
-        </section>
+        </div>
+      </section>
 
-        <section class="feautures-section section">
-          <div class="container">
+      <section class="feautures-section section">
+        <div class="container">
           <ul class="feautures-list">
             <li class="feautures-items">
               <h4 class="feautures-title">ВНИМАНИЕ К ДЕТАЛЯМ</h4>
@@ -70,8 +71,8 @@
             <li class="feautures-items">
               <h4 class="feautures-title">ПУНКТУАЛЬНОСТЬ</h4>
               <p class="feautures-text">
-                Задача организации, в особенности же рамки и место обучения кадров
-                влечет за собой.
+                Задача организации, в особенности же рамки и место обучения
+                кадров влечет за собой.
               </p>
             </li>
 
@@ -91,115 +92,114 @@
               </p>
             </li>
           </ul>
-          </div>
+        </div>
       </section>
       <section class="what-we-do-section section">
         <div class="what-we-do-section container">
-        <h2 class="what-we-do-title">Чем мы занимаемся</h2>
-        <div class="what-we-do-img-container">
-        <ul class="what-we-do-img">
-          <li class="what-we-do-img-list">
-            <img
-              src="./images/laptop.jpg"
-              width="370"
-              height="294"
-              alt="планшет"
-            />
-          </li>
-          <li class="what-we-do-img-list">
-            <img
-              src="./images/computer_and_phone.jpg"
-              width="370"
-              height="294"
-              alt="компьютер_и_телефон"
-            />
-          </li>
-          <li class="what-we-do-img-list">
-            <img
-              src="./images/laptop_in_hands.jpg"
-              width="370"
-              height="294"
-              alt="планшет_в_руках"
-            />
-            </li>
-        </ul>
-        </div>
+          <h2 class="what-we-do-title">Чем мы занимаемся</h2>
+          <div class="what-we-do-img-container">
+            <ul class="what-we-do-img">
+              <li class="what-we-do-img-list">
+                <img
+                  src="./images/laptop.jpg"
+                  width="370"
+                  height="294"
+                  alt="планшет"
+                />
+              </li>
+              <li class="what-we-do-img-list">
+                <img
+                  src="./images/computer_and_phone.jpg"
+                  width="370"
+                  height="294"
+                  alt="компьютер_и_телефон"
+                />
+              </li>
+              <li class="what-we-do-img-list">
+                <img
+                  src="./images/laptop_in_hands.jpg"
+                  width="370"
+                  height="294"
+                  alt="планшет_в_руках"
+                />
+              </li>
+            </ul>
+          </div>
         </div>
       </section>
 
       <section class="our_team_section section">
         <div class="container">
-        <h2 class="our_team_section_title">Наша команда</h2>
-        <ul class="our_team_list">
-          <li class="our_team_item">
-            <img
-              src="./images/ihor_demyanenko.jpg"
-              width="270"
-              height="260"
-              alt="ihor_demyanenko"
-            />
-            <h5 class="our_team_name">Игорь Демьяненко</h5>
-            <p lang="en" class="our_team_profession">Product Designer</p>
-          </li>
-          <li class="our_team_item">
-            <img
-              src="./images/olha_repina.jpg"
-              width="270"
-              height="260"
-              alt="olha_repina"
-            />
-            <h5 class="our_team_name">Ольга Репина</h5>
-            <p lang="en" class="our_team_profession">Frontend Developer</p>
-          </li>
-          <li class="our_team_item">
-            <img
-              src="./images/nikolai_tarasov.jpg"
-              width="270"
-              height="260"
-              alt="nikolai_tarasov"
-            />
-            <h5 class="our_team_name">Николай Тарасов</h5>
-            <p lang="en" class="our_team_profession">Marketing</p>
-          </li>
-          <li class="our_team_item">
-            <img
-              src="./images/mikhail_ermakov.jpg"
-              width="270"
-              height="260"
-              alt="mikhail_ermakov"
-            />
-            <h5 class="our_team_name">Михаил Ермаков</h5>
-            <p lang="en" class="our_team_profession">UI Designer</p>
-          </li>
-        </ul>
+          <h2 class="our_team_section_title">Наша команда</h2>
+          <ul class="our_team_list">
+            <li class="our_team_item">
+              <img
+                src="./images/ihor_demyanenko.jpg"
+                width="270"
+                height="260"
+                alt="ihor_demyanenko"
+              />
+              <h5 class="our_team_name">Игорь Демьяненко</h5>
+              <p lang="en" class="our_team_profession">Product Designer</p>
+            </li>
+            <li class="our_team_item">
+              <img
+                src="./images/olha_repina.jpg"
+                width="270"
+                height="260"
+                alt="olha_repina"
+              />
+              <h5 class="our_team_name">Ольга Репина</h5>
+              <p lang="en" class="our_team_profession">Frontend Developer</p>
+            </li>
+            <li class="our_team_item">
+              <img
+                src="./images/nikolai_tarasov.jpg"
+                width="270"
+                height="260"
+                alt="nikolai_tarasov"
+              />
+              <h5 class="our_team_name">Николай Тарасов</h5>
+              <p lang="en" class="our_team_profession">Marketing</p>
+            </li>
+            <li class="our_team_item">
+              <img
+                src="./images/mikhail_ermakov.jpg"
+                width="270"
+                height="260"
+                alt="mikhail_ermakov"
+              />
+              <h5 class="our_team_name">Михаил Ермаков</h5>
+              <p lang="en" class="our_team_profession">UI Designer</p>
+            </li>
+          </ul>
         </div>
       </section>
     </main>
     <footer class="footer">
       <div class="footer-container container">
-      <a href="" class="logo-footer">
-        <span class="web-footer-first-part">Web</span>
-        <span class="web-footer-second-part">Studio</span></a
-      >
-      <address class="adress">
-        <ul>
-          <li>
-            <a href="https://goo.gl/maps/dDXSpFZrCDTYoZzZ8" class="map"
-              >бул. Леси Украинки, 26, Киев, 02000
-            </a>
-          </li>
-          <li>
-            <a href="mailto:info@devstudio.com" class="mailto"
-              >info@devstudio.com></a
-            >
-          </li>
-          <li>
-            <a href="tel:+380961111111" class="tel">+38 096 111 11 11</a>
-          </li>
-        </ul>
-      </address>
+        <a href="" class="logo-footer">
+          <span class="web-footer-first-part">Web</span>
+          <span class="web-footer-second-part">Studio</span></a
+        >
+        <address class="adress">
+          <ul>
+            <li>
+              <a href="https://goo.gl/maps/dDXSpFZrCDTYoZzZ8" class="map"
+                >бул. Леси Украинки, 26, Киев, 02000
+              </a>
+            </li>
+            <li>
+              <a href="mailto:info@devstudio.com" class="mailto"
+                >info@devstudio.com></a
+              >
+            </li>
+            <li>
+              <a href="tel:+380961111111" class="tel">+38 096 111 11 11</a>
+            </li>
+          </ul>
+        </address>
       </div>
     </footer>
   </body>
 </html>
-© 2021 GitHub, Inc. Terms Privacy Security Status Docs Co
