--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         <div class="header-contacts">
           <ul class="contacts">
             <li class="item">
-              <a href="mailto:info@devstudio.com">info@devstudio.com></a>
+              <a href="mailto:info@devstudio.com">info@devstudio.com</a>
             </li>
             <li class="item">
               <a href="tel:+380961111111">+38 096 111 11 11</a>
@@ -184,17 +184,17 @@
         >
         <address class="adress">
           <ul>
-            <li>
+            <li class="adress-item">
               <a href="https://goo.gl/maps/dDXSpFZrCDTYoZzZ8" class="map"
                 >бул. Леси Украинки, 26, Киев, 02000
               </a>
             </li>
-            <li>
+            <li class="adress-item">
               <a href="mailto:info@devstudio.com" class="mailto"
                 >info@devstudio.com></a
               >
             </li>
-            <li>
+            <li class="adress-item">
               <a href="tel:+380961111111" class="tel">+38 096 111 11 11</a>
             </li>
           </ul>
