--- a/portfolio.html
+++ b/portfolio.html
@@ -55,7 +55,7 @@
             <li class="portfolio-buttons">
               <button type="button" class="portfolio-filter-button">Все</button>
             </li>
-            <li>
+            <li class="portfolio-buttons">
               <button type="button" class="portfolio-filter-button">
                 Веб-сайты
               </button>
@@ -77,146 +77,203 @@
             </li>
           </ul>
 
-          <div class="work-example-list-container">
-            <ul class="work-examples-list">
-              <li class="work-examples">
-                <a
-                  href="./second.html"
-                  target="_blank"
-                  rel="noofener noreferer"
-                >
-                  <img
-                    src="./images/woman_and_man.jpg"
-                    width="370"
-                    height="294"
-                    alt="женщины_и_мужчина"
-                  />
+          <ul class="work-examples-list">
+            <li class="work-examples">
+              <a
+                class="work-examples-button"
+                href="./second.html"
+                target="_blank"
+                rel="noofener noreferer"
+              >
+                <img
+                  src="./images/woman_and_man.jpg"
+                  width="370"
+                  height="294"
+                  alt="женщины_и_мужчина"
+                />
+                <div class="work-example-description">
                   <h5 class="work-example-name">Технокряк</h5>
                   <p class="work-example-type">Веб-сайт</p>
-                </a>
-              </li>
+                </div>
+              </a>
+            </li>
 
-              <li class="work-examples">
-                <a href="" target="_blank" rel="noofener noreferer">
-                  <img
-                    src="./images/basketball.jpg"
-                    width="370"
-                    height="294"
-                    alt="баскетбол"
-                  />
+            <li class="work-examples">
+              <a
+                class="work-examples-button"
+                href=""
+                target="_blank"
+                rel="noofener noreferer"
+              >
+                <img
+                  src="./images/basketball.jpg"
+                  width="370"
+                  height="294"
+                  alt="баскетбол"
+                />
+                <div class="work-example-description">
                   <h5 class="work-example-name">
                     Постер <span lang="en">Orlean vs Golden Star</span>
                   </h5>
                   <p class="work-example-type">Дизайн</p>
-                </a>
-              </li>
+                </div>
+              </a>
+            </li>
 
-              <li class="work-examples">
-                <a href="" target="_blank" rel="noofener noreferer">
-                  <img
-                    src="./images/seafood.jpg"
-                    width="370"
-                    height="294"
-                    alt="ресторан"
-                  />
+            <li class="work-examples">
+              <a
+                class="work-examples-button"
+                href=""
+                target="_blank"
+                rel="noofener noreferer"
+              >
+                <img
+                  src="./images/seafood.jpg"
+                  width="370"
+                  height="294"
+                  alt="ресторан"
+                />
+                <div class="work-example-description">
                   <h5 class="work-example-name">
                     Ресторан <span lang="en">Seafood</span>
                   </h5>
                   <p class="work-example-type">Приложение</p>
-                </a>
-              </li>
+                </div>
+              </a>
+            </li>
 
-              <li class="work-examples">
-                <a href="" target="_blank" rel="noofener noreferer">
-                  <img
-                    src="./images/headphones.jpg"
-                    width="370"
-                    height="294"
-                    alt="наушники"
-                  />
+            <li class="work-examples">
+              <a
+                class="work-examples-button"
+                href=""
+                target="_blank"
+                rel="noofener noreferer"
+              >
+                <img
+                  src="./images/headphones.jpg"
+                  width="370"
+                  height="294"
+                  alt="наушники"
+                />
+                <div class="work-example-description">
                   <h5 class="work-example-name">
                     Проект <span lang="en">Prime</span>
                   </h5>
                   <p class="work-example-type">Маркетинг</p>
-                </a>
-              </li>
+                </div>
+              </a>
+            </li>
 
-              <li class="work-examples">
-                <a href="" target="_blank" rel="noofener noreferer">
-                  <img
-                    src="./images/two_boxes.jpg"
-                    width="370"
-                    height="294"
-                    alt="коробочки"
-                  />
+            <li class="work-examples">
+              <a
+                class="work-examples-button"
+                href=""
+                target="_blank"
+                rel="noofener noreferer"
+              >
+                <img
+                  src="./images/two_boxes.jpg"
+                  width="370"
+                  height="294"
+                  alt="коробочки"
+                />
+                <div class="work-example-description">
                   <h5 class="work-example-name">
                     Проект<span lang="en">Boxes</span>
                   </h5>
                   <p class="work-example-type">Приложение</p>
-                </a>
-              </li>
+                </div>
+              </a>
+            </li>
 
-              <li class="work-examples">
-                <a href="" target="_blank" rel="noofener noreferer">
-                  <img
-                    src="./images/monitor.jpg"
-                    width="370"
-                    height="294"
-                    alt="монитор"
-                  />
+            <li class="work-examples">
+              <a
+                class="work-examples-button"
+                href=""
+                target="_blank"
+                rel="noofener noreferer"
+              >
+                <img
+                  src="./images/monitor.jpg"
+                  width="370"
+                  height="294"
+                  alt="монитор"
+                />
+                <div class="work-example-description">
                   <h5 class="work-example-name">
                     <span lang="en">Inspiration has no Borders</span>
                   </h5>
                   <p class="work-example-type">Веб-сайт</p>
-                </a>
-              </li>
+                </div>
+              </a>
+            </li>
 
-              <li class="work-examples">
-                <a href="" target="_blank" rel="noofener noreferer">
-                  <img
-                    src="./images/open_book.jpg"
-                    width="370"
-                    height="294"
-                    alt="книга"
-                  />
+            <li class="work-examples">
+              <a
+                class="work-examples-button"
+                href=""
+                target="_blank"
+                rel="noofener noreferer"
+              >
+                <img
+                  src="./images/open_book.jpg"
+                  width="370"
+                  height="294"
+                  alt="книга"
+                />
+                <div class="work-example-description">
                   <h5 class="work-example-name">
                     Издание<span lang="en">Limited Edition</span>
                   </h5>
                   <p class="work-example-type">Дизайн</p>
-                </a>
-              </li>
+                </div>
+              </a>
+            </li>
 
-              <li class="work-examples">
-                <a href="" target="_blank" rel="noofener noreferer">
-                  <img
-                    src="./images/label.jpg"
-                    width="370"
-                    height="294"
-                    alt="лейбл"
-                  />
+            <li class="work-examples">
+              <a
+                class="work-examples-button"
+                href=""
+                target="_blank"
+                rel="noofener noreferer"
+              >
+                <img
+                  src="./images/label.jpg"
+                  width="370"
+                  height="294"
+                  alt="лейбл"
+                />
+                <div class="work-example-description">
                   <h5 class="work-example-name">
                     Проект <span lang="en">LAB</span>
                   </h5>
                   <p class="work-example-type">Маркетинг</p>
-                </a>
-              </li>
+                </div>
+              </a>
+            </li>
 
-              <li class="work-examples">
-                <a href="" target="_blank" rel="noofener noreferer">
-                  <img
-                    src="./images/laptop_portfolio.jpg"
-                    width="370"
-                    height="294"
-                    alt="ноутбук"
-                  />
+            <li class="work-examples">
+              <a
+                class="work-examples-button"
+                href=""
+                target="_blank"
+                rel="noofener noreferer"
+              >
+                <img
+                  src="./images/laptop_portfolio.jpg"
+                  width="370"
+                  height="294"
+                  alt="ноутбук"
+                />
+                <div class="work-example-description">
                   <h5 class="work-example-name">
                     Проект <span lang="en">Prime</span>
                   </h5>
                   <p class="work-example-type">Приложение</p>
-                </a>
-              </li>
-            </ul>
-          </div>
+                </div>
+              </a>
+            </li>
+          </ul>
         </div>
       </section>
     </main>
