corrects_logo_in_header

--- a/index.html
+++ b/index.html
@@ -180,8 +180,8 @@
       <div class="footer-container container">
         <a href="" class="logo-footer">
           <span class="web-footer-first-part">Web</span>
-          <span class="web-footer-second-part">Studio</span></a
-        >
+          <span class="web-footer-second-part">Studio</span>
+        </a>
         <address class="adress">
           <ul>
             <li class="adress-item">
